Fixed mobile spacing bug, added boilerplate pages and pictures

--- a/mstyle.css
+++ b/mstyle.css
@@ -31,7 +31,6 @@ a:visited {
 }
 img.mindex {
   max-width: 50%;
-  height: auto;
   border: 5px solid white;
   padding: 10px;
   display: block;
